--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "testcafe-browser-provider-idevice",
   "version": "1.0.0",
   "description": "idevice TestCafe browser provider plugin.",
-  "repository": "https://github.com/bsmithb2/testcafe-browser-provider-idevice",
-  "homepage": "https://github.com/bsmithb2/testcafe-browser-provider-idevice",
+  "repository": "https://github.com/jtthackery/testcafe-browser-provider-idevices",
+  "homepage": "https://github.com/jtthackery/testcafe-browser-provider-idevices",
   "author": {
     "name": "Bradley Smith",
     "email": "bsmithb2@gmail.com",
@@ -25,21 +25,19 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "^6.11.6"
+    "@babel/core": "~7.8.7",
+    "@babel/plugin-transform-runtime": "~7.8.3",
+    "@babel/preset-env": "~7.8.7",
+    "@babel/runtime": "~7.8.7"
   },
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-stage-3": "^6.11.0",
-    "del": "^2.0.0",
-    "gulp": "^4.0.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-eslint": "^3.0.1",
-    "gulp-mocha": "^6.0.0",
-    "node-version": "^1.0.0",
-    "publish-please": "^5.4.3"
+    "babel-eslint": "~10.1.0",
+    "del": "~5.1.0",
+    "gulp": "~4.0.2",
+    "gulp-babel": "~8.0.0",
+    "gulp-eslint": "~6.0.0",
+    "gulp-mocha": "~7.0.2",
+    "node-version": "~1.2.0",
+    "publish-please": "~5.5.1"
   }
 }
