--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,11 +1,9 @@
 {
   "compact": false,
   "presets": [
-    "es2015-loose",
-    "babel-preset-stage-3"
+    "@babel/preset-env"
   ],
   "plugins": [
-    "transform-runtime",
-    "add-module-exports"
+    "@babel/plugin-transform-runtime"
   ]
 }
