--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lib"
   ],
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "publish-please": "publish-please",
+    "prepublish": "publish-please guard"
   },
   "keywords": [
     "testcafe",
@@ -35,6 +37,7 @@
     "gulp-babel": "~8.0.0",
     "gulp-eslint": "~6.0.0",
     "gulp-mocha": "~7.0.2",
-    "node-version": "~1.2.0"
+    "node-version": "~1.2.0",
+    "publish-please": "~5.5.1"
   }
 }
